<?php

namespace App\Person;

use App\Barcode\BarcodeInterface;
use App\Search\ParameterList;

class Librarian extends LibraryMember
{
    public function getBarcode(): BarcodeInterface
    {
        // TODO: Implement getBarcode() method.
    }
}
