<?php

namespace App\Search;

class AuthorParameter extends ScalarStringParameter
{
}
