<?php

namespace App\Search;

class CategoryParameter extends ScalarStringParameter
{
}
