<?php

namespace App\Search;

interface ParameterList
{
    public function add(Parameter $parameter);
}
