<?php

namespace App\Search;

class TitleParameter extends ScalarStringParameter
{
}
