<?php

namespace App\System;

interface Fine
{
    public function pay();
}
